Revert "Fixed Text visibility issue on DP"
This reverts commit c986607b5c011d52e210758de787ab8d524ae8df.

--- a/src/styles/global-theme.css
+++ b/src/styles/global-theme.css
@@ -1283,12 +1283,9 @@ body {
 }
 .table tbody td {
   padding: 12px;
-  color: black;
-  border-top: 1px solid rgba(255, 255, 255, 0.03);
-}
-[data-theme="dark"] .table tbody td {
   color: white;
-  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  border-color: 1px solid rgba(255, 255, 255, 0.03);
+  border-top: 1px solid rgba(255, 255, 255, 0.03);
 }
 
 .algo {
